# k2tree_basic_v0.1

./: CMakeLists.txt  README.md  bitrankw32int.c  bitrankw32int.h  buildk2tree.c  checkrebuild.c  kTree.c  kTree.h  multiply.c  multiply_pthread.c  pagerank.c  pagerank_pthread.c  pagerank_utils.c  pagerank_utils.h  rebuild.c  reverserebuild.c  testSpeed.c  testSpeedPred.c  use.c
data/: example14.graph-txt  example14.k2tplain
gen_graphs/: edgedescr2plain.py  graph-txt2kt-plain.py  split_graph-text.py
